# WordCounter

./: .gitignore  CMakeLists.txt  README.md
include/: Exceptions.hpp  Stats.hpp  Utils.hpp  WordCounter.hpp  WordProcessor.hpp
src/: Utils.cpp  WordCounter.cpp  WordProcessor.cpp  main.cpp
